// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch component > Extra Large switch disabled should render correctly 1`] = `
[
  <button
    aria-checked={false}
    className="bg-gray-5 data-[state=checked]:bg-green/50 w-14 h-8 rounded-full relative outline-none"
    data-disabled=""
    data-state="unchecked"
    data-testid="switch"
    disabled={true}
    id="switch"
    onClick={[Function]}
    role="switch"
    style={
      {
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      }
    }
    type="button"
    value="on"
  >
    <span
      className="block bg-white rounded-full transition-transform duration-100 translate-x-0.5 data-[state=checked]:translate-x-[26px] will-change-transform w-7 h-7"
      data-disabled=""
      data-state="unchecked"
    />
  </button>,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={true}
    style={
      {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Switch component > Extra Large switch should render correctly 1`] = `
[
  <button
    aria-checked={false}
    className="bg-gray-10 data-[state=checked]:bg-green w-14 h-8 rounded-full relative outline-none"
    data-state="unchecked"
    data-testid="switch"
    disabled={false}
    id="switch"
    onClick={[Function]}
    role="switch"
    style={
      {
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      }
    }
    type="button"
    value="on"
  >
    <span
      className="block bg-white rounded-full transition-transform duration-100 translate-x-0.5 data-[state=checked]:translate-x-[26px] will-change-transform w-7 h-7"
      data-state="unchecked"
    />
  </button>,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={false}
    style={
      {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Switch component > Large switch disabled should render correctly 1`] = `
[
  <button
    aria-checked={false}
    className="bg-gray-5 data-[state=checked]:bg-green/50 w-12 h-7 rounded-full relative outline-none"
    data-disabled=""
    data-state="unchecked"
    data-testid="switch"
    disabled={true}
    id="switch"
    onClick={[Function]}
    role="switch"
    style={
      {
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      }
    }
    type="button"
    value="on"
  >
    <span
      className="block bg-white rounded-full transition-transform duration-100 translate-x-0.5 data-[state=checked]:translate-x-[22px] will-change-transform w-6 h-6"
      data-disabled=""
      data-state="unchecked"
    />
  </button>,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={true}
    style={
      {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Switch component > Large switch should render correctly 1`] = `
[
  <button
    aria-checked={false}
    className="bg-gray-10 data-[state=checked]:bg-green w-12 h-7 rounded-full relative outline-none"
    data-state="unchecked"
    data-testid="switch"
    disabled={false}
    id="switch"
    onClick={[Function]}
    role="switch"
    style={
      {
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      }
    }
    type="button"
    value="on"
  >
    <span
      className="block bg-white rounded-full transition-transform duration-100 translate-x-0.5 data-[state=checked]:translate-x-[22px] will-change-transform w-6 h-6"
      data-state="unchecked"
    />
  </button>,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={false}
    style={
      {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Switch component > Medium switch disabled should render correctly 1`] = `
[
  <button
    aria-checked={false}
    className="bg-gray-5 data-[state=checked]:bg-green/50 w-8 h-5 rounded-full relative outline-none"
    data-disabled=""
    data-state="unchecked"
    data-testid="switch"
    disabled={true}
    id="switch"
    onClick={[Function]}
    role="switch"
    style={
      {
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      }
    }
    type="button"
    value="on"
  >
    <span
      className="block bg-white rounded-full transition-transform duration-100 translate-x-0.5 data-[state=checked]:translate-x-[14px] will-change-transform w-4 h-4"
      data-disabled=""
      data-state="unchecked"
    />
  </button>,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={true}
    style={
      {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Switch component > Medium switch should render correctly 1`] = `
[
  <button
    aria-checked={false}
    className="bg-gray-10 data-[state=checked]:bg-green w-8 h-5 rounded-full relative outline-none"
    data-state="unchecked"
    data-testid="switch"
    disabled={false}
    id="switch"
    onClick={[Function]}
    role="switch"
    style={
      {
        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      }
    }
    type="button"
    value="on"
  >
    <span
      className="block bg-white rounded-full transition-transform duration-100 translate-x-0.5 data-[state=checked]:translate-x-[14px] will-change-transform w-4 h-4"
      data-state="unchecked"
    />
  </button>,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={false}
    style={
      {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;
